[gd_scene load_steps=3 format=3 uid="uid://b7h6i5j4k3l2m"]

[ext_resource type="Script" path="res://scripts/menus/MainMenu.gd" id="1_main_menu"]
[ext_resource type="PackedScene" uid="uid://c8j3k2lm9n4o5" path="res://scenes/menus/LoadGameMenu.tscn" id="2_load_game_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.1, 0.2, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 48
text = "Dragon Ranch"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Breed legendary dragons!"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "New Game"

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Continue"

[node name="LoadGameButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Load Game"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VersionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "v1.0 - Session 14"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LoadGameMenu" parent="." instance=ExtResource("2_load_game_menu")]
visible = false
layout_mode = 1

[node name="ConfirmDialog" type="ConfirmationDialog" parent="."]
title = "Start New Game?"
initial_position = 2
size = Vector2i(400, 150)
dialog_text = "Starting a new game will overwrite the auto-save. Continue?"
ok_button_text = "Start New Game"
cancel_button_text = "Cancel"
